refactor: simplify StoreType, PerScopeConfig, and MachineIdProvider
- refactor(api): use switch expression in StoreType.of
- refactor(api): convert PerScopeConfig to a record
- refactor(utils): use Files.readString in MachineIdProviderImpl